<resources>
    <string name="app_name">GoGoSport</string>

    <!--欢迎页-->
    <string name="splash_tip">GoGoSport</string>
    <string name="splash_welcome_tip">让运动更自由</string>

    <!--主页tab-->
    <string name="main_page_count_step_tab">步数</string>
    <string name="main_page_sport_tab">运动</string>
    <string name="main_page_user_tab">个人中心</string>

    <!--计步页面-->
    <string name="count_step_page_title">今日步数</string>
    <string name="count_step_page_step_text">步</string>
    <string name="count_step_page_mile_text">千米</string>
    <string name="count_step_page_calorie_text">千卡</string>
    <string name="count_step_page_time_text">步行时间</string>

    <!--运动主页-->
    <string name="sport_page_title">跑步</string>
    <string name="sport_second_title">坚持跑步</string>
    <string name="sport_declaration">来提高身体免疫力</string>
    <string name="main_page_run_image_desc">跑步</string>
    <string name="main_page_start_run">开始跑步</string>
    <string name="main_page_wonderful_day">Wonderful Day</string>

    <!--个人中心页面-->
    <string name="user_center_page_title">个人中心</string>
    <string-array name="user_center_menu_items">
        <item>1:个人中心:gone:user_center_user_message_icon</item>
        <item>2:偏好设置:gone:user_center_preference_icon</item>
        <item>3:说明:gone:user_center_instruction_icon</item>
    </string-array>

    <!--设置页面-->
    <string name="setting_title">设置</string>
    <string name="setting_speak_switch_title">语音播报</string>
    <string name="setting_speak_switch_summary">开启语音播报功能</string>
    <string name="setting_speak_rate_title">播报频率</string>
    <string name="setting_speak_rate_summary">选择语音播报频率</string>
    <string name="setting_speak_type_title">播报类型</string>
    <string name="setting_speak_type_summary">选择播报的内容</string>

    <string-array name="setting_speak_interval_preference">
        <item>15 秒</item>
        <item>30 秒</item>
        <item>45 秒</item>
        <item>60 秒</item>
        <item>100 秒</item>
        <item>120 秒</item>
    </string-array>
    <string-array name="setting_speak_interval_preference_values">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>100</item>
        <item>120</item>
    </string-array>

    <string-array name="setting_speak_type_preference">
        <item>时长</item>
        <item>配速</item>
        <item>里程</item>
        <item>步数</item>
        <item>卡路里</item>
    </string-array>
    <string-array name="setting_speak_type_preference_values">
        <item>time</item>
        <item>speed</item>
        <item>mileage</item>
        <item>step</item>
        <item>calorie</item>
    </string-array>
</resources>
